# adventures

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
adventures/: d1y2023.py  d2y2023.py  d3y2023.py  d4y2023.py  dXyX.py  trebuchet.py
adventures/cli/: cli.py
tests/: test_day.py  test_days.py  test_trebuchet.py
