[tool.poetry]
name = "adventures"
version = "0.1.0"
description = "Advent of Code"
authors = ["Shiny Brar <charanjotbrar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
rich = "^13.7.0"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.scripts]
aoc = "adventures.cli.cli:cli"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
